- Fixed: MQTT-AD: better handling of Switch commands that needs a 'state' object
- Fixed: MQTT-AD: fixed brightness for HS lights
- Fixed: MQTT-AD: prevent blind from updating on non-numeric state changes
- Fixed: MQTT-AD, RGB dimmers did not work correctly in scenes/timers
- Fixed: Sunset/rise timers now correctly set the time for next day
- Removed: OpenZWave (Move to ZWaveJS-UI in combination with MQTT Auto Discovery)

Version 2023.2 (July 21 2023)
- Implemented: 2FA/TOTP (Time-based One-Time Password) and HOTP (HMAC-based One-Time Password)
- Implemented: Alfen Eve Charger hardware
- Implemented: Allow a 'user' with shared devices to set it's own favorite devices
- Implemented: Custom pages, new Angular template examples
- Implemented: Custom pages, now need at least a user with Viewer rights
- Implemented: Enever hardware (Live Dutch Gas/Electricity prices for various providers)
- Implemented: Enphase, (V7 firmware) added support for enabling/disabling power production
- Implemented: Device reordering for Users with devices
- Implemented: Libre Hardware Monitor (Windows System monitor replacement for Open Hardware Monitor)
- Implemented: LUA: Added name state to devicechanged_ext table
- Implemented: RFXCom, Updated SDK
- Implemented: RTL433, Added support for volume_m3 meter
- Implemented: MQTT-AD, added support for number (config) types
- Implemented: P1 Meter, added Actual Usage/Delivery (total of L1 + L2 + L3)
- Implemented: P1 Meter, added calculated kWh devices per phase for usage and delivery
- Implemented: P1 Meter, new way of displaying returned energy
- Implemented: Users with admin rights and selected devices will now see only those devices
- Implemented: Users devices editor, option to remove all nodes/devices
- Implemented: Visual Crossing (replacement for Darksky/Forecast)
- Implemented: -nocache command line option (ask browser not to cache pages)
- Fixed: Blinds percentage timers
- Fixed: Chime structure check